--- a/index.html
+++ b/index.html
@@ -127,7 +127,7 @@
                     <div id="vispiechart"></div>
                     <h4>ICESA Ratio</h4>
                     <p class="card-text" style="text-align: justify !important;">
-                        The pie chart below depicts the percentage of Lower, Average, and High ICESA schools in Australia. Any school with a rank less than 800 is considered to have very disadvantaged student backgrounds, while any school with a rank greater than 1200 is considered to have a strong advantage of student background.
+                        The pie chart below depicts the percentage of Lower, Average, and High ICSEA schools in Australia. Any school with a rank less than 800 is considered to have very disadvantaged student backgrounds, while any school with a rank greater than 1200 is considered to have a strong advantage of student background.
                     </p>
                 </div>
             </div>
@@ -147,7 +147,7 @@
                     </ul>
                     <ul>
                         <li>
-                            Most of the Primary School have Average ICSEA rank i.e. 333 primary school has more then 1000 ICESA rank with around 229 primary school ranges in upper highest category of ICESA rank.
+                            Most of the Primary School have Average ICSEA rank i.e. 333 primary school has more then 1000 ICSEA rank with around 229 primary school ranges in upper highest category of ICSEA rank.
                         </li>
                     </ul>
                     <ul>
