--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
             <div class="card h-100">
                 <div class="card-body">
                     <div id="vispiechart"></div>
-                    <h4>ICESA Ratio</h4>
+                    <h4>ICSEA Ratio</h4>
                     <p class="card-text" style="text-align: justify !important;">
                         The pie chart below depicts the percentage of Lower, Average, and High ICSEA schools in Australia. Any school with a rank less than 800 is considered to have very disadvantaged student backgrounds, while any school with a rank greater than 1200 is considered to have a strong advantage of student background.
                     </p>
@@ -138,7 +138,7 @@
         <div class="col-md-5 mb-3">
             <div class="card h-100">
                 <div class="card-body">
-                    <h4>ICESA Rank </h4>
+                    <h4>ICSEA Rank </h4>
                     <p style="text-align: justify !important;" class="card-text">
                     <ul>
                         <li>
